# codesearch

./: .gitignore  app.py  cli.py  config.py  embed.py  language.py  main.py  parser.py  pyproject.toml  shared.py
commands/: index.py  init.py  search.py  server.py
parsers/: typescript.py
